# routes/post.js
@@ -1,27 +1,21 @@
+// routes/post.js
 const express = require('express');
 const router = express.Router();
 const Post = require('../models/Post');
-const validate = require('../middlewares/validate');
-const Joi = require('joi');
+const validatePost = require('../middlewares/validatePost');
+const { ensureAuth } = require('../middlewares/authMiddleware');
 
-const postSchema = Joi.object({
-  title: Joi.string().required(),
-  content: Joi.string().required(),
-});
 /**
  * @swagger
  * /post:
  *   get:
  *     summary: Get all posts
  *     tags: [Post]
- *     security:
- *       - cookieAuth: []
  *     responses:
  *       200:
- *         description: List of posts
- *
+ *         description: A list of posts
  *   post:
- *     summary: Create a post
+ *     summary: Create a new post
  *     tags: [Post]
  *     security:
  *       - cookieAuth: []
@@ -30,57 +24,28 @@ const postSchema = Joi.object({
  *       content:
  *         application/json:
  *           schema:
- *             type: object
- *             required:
- *               - title
- *               - content
- *             properties:
- *               title:
- *                 type: string
- *                 example: My First Blog
- *               content:
- *                 type: string
- *                 example: This is a post about how to build a Node.js app.
+ *             $ref: '#/components/schemas/Post'
  *     responses:
  *       201:
  *         description: Post created successfully
- *       400:
- *         description: Validation failed
  */
-
-
-/**
- * @swagger
- * /post:
- *   get:
- *     summary: Get all posts
- *     tags: [Post]
- */
-router.get('/', async (req, res, next) => {
-  try {
-    const posts = await Post.find();
-    res.json(posts);
-  } catch (err) {
-    next(err);
-  }
-});
-
-/**
- * @swagger
- * /post:
- *   post:
- *     summary: Create a post
- *     tags: [Post]
- */
-router.post('/', validate(postSchema), async (req, res, next) => {
-  try {
-    const post = new Post({ ...req.body, userId: req.user._id });
-    await post.save();
-    res.status(201).json(post);
-  } catch (err) {
-    next(err);
-  }
-});
+router.route('/')
+  .get(async (req, res, next) => {
+    try {
+      const posts = await Post.find();
+      res.json(posts);
+    } catch (err) {
+      next(err);
+    }
+  })
+  .post(ensureAuth, validatePost, async (req, res, next) => {
+    try {
+      const newPost = await Post.create(req.body);
+      res.status(201).json(newPost);
+    } catch (err) {
+      next(err);
+    }
+  });
 
 /**
  * @swagger
@@ -88,30 +53,56 @@ router.post('/', validate(postSchema), async (req, res, next) => {
  *   put:
  *     summary: Update a post
  *     tags: [Post]
- */
-router.put('/:id', validate(postSchema), async (req, res, next) => {
-  try {
-    const updated = await Post.findByIdAndUpdate(req.params.id, req.body, { new: true });
-    res.json(updated);
-  } catch (err) {
-    next(err);
-  }
-});
-
-/**
- * @swagger
- * /post/{id}:
+ *     security:
+ *       - cookieAuth: []
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *         description: Post ID
+ *     requestBody:
+ *       required: true
+ *       content:
+ *         application/json:
+ *           schema:
+ *             $ref: '#/components/schemas/Post'
+ *     responses:
+ *       200:
+ *         description: Post updated successfully
  *   delete:
  *     summary: Delete a post
  *     tags: [Post]
+ *     security:
+ *       - cookieAuth: []
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *         description: Post ID
+ *     responses:
+ *       200:
+ *         description: Post deleted successfully
  */
-router.delete('/:id', async (req, res, next) => {
-  try {
-    await Post.findByIdAndDelete(req.params.id);
-    res.json({ message: 'Post deleted' });
-  } catch (err) {
-    next(err);
-  }
-});
+router.route('/:id')
+  .put(ensureAuth, validatePost, async (req, res, next) => {
+    try {
+      const updatedPost = await Post.findByIdAndUpdate(req.params.id, req.body, { new: true });
+      res.json(updatedPost);
+    } catch (err) {
+      next(err);
+    }
+  })
+  .delete(ensureAuth, async (req, res, next) => {
+    try {
+      await Post.findByIdAndDelete(req.params.id);
+      res.json({ message: 'Post deleted' });
+    } catch (err) {
+      next(err);
+    }
+  });
 
 module.exports = router;
