# routes/user.js
@@ -1,6 +1,8 @@
+// routes/user.js
 const express = require('express');
 const router = express.Router();
 const User = require('../models/User');
+const { ensureAuth } = require('../middlewares/authMiddleware');
 
 /**
  * @swagger
@@ -8,8 +10,19 @@ const User = require('../models/User');
  *   get:
  *     summary: Get all users
  *     tags: [User]
+ *     security:
+ *       - cookieAuth: []
+ *     responses:
+ *       200:
+ *         description: A list of users
+ *         content:
+ *           application/json:
+ *             schema:
+ *               type: array
+ *               items:
+ *                 $ref: '#/components/schemas/User'
  */
-router.get('/', async (req, res, next) => {
+router.get('/', ensureAuth, async (req, res, next) => {
   try {
     const users = await User.find();
     res.json(users);
@@ -24,8 +37,20 @@ router.get('/', async (req, res, next) => {
  *   delete:
  *     summary: Delete a user
  *     tags: [User]
+ *     security:
+ *       - cookieAuth: []
+ *     parameters:
+ *       - in: path
+ *         name: id
+ *         schema:
+ *           type: string
+ *         required: true
+ *         description: User ID
+ *     responses:
+ *       200:
+ *         description: User deleted successfully
  */
-router.delete('/:id', async (req, res, next) => {
+router.delete('/:id', ensureAuth, async (req, res, next) => {
   try {
     await User.findByIdAndDelete(req.params.id);
     res.json({ message: 'User deleted' });
